styles.css
body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
    text-align: center;
    color: #333;
    line-height: 1.6;
    background: linear-gradient(135deg, #B0E0E6, #7fffea, #a1f0b5, #a1f0b5, #7fffea, #B0E0E6);
}

header, section, footer {
    padding: 20px;
}

h1, h2, h3 {
    color: #333;
    margin-bottom: 20px;
    font-weight: 700;
}

p {
    color: #666;
    margin-bottom: 30px; /* Increased margin */
    font-size: 20px; /* Increased font size */
    text-align: center;
}

img {
    display: block;
    margin: 0 auto;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    max-width: 100%;
}

.qr-code {
    width: 150px;
    color: #333;
    text-decoration: none;
    text-align: center;
    display: inline-block;
}

.qr-code a {
    display: inline-block;
}

.qr-code:hover {
    background-color: rgba(0, 0, 0, 0.1);
    text-decoration: underline;
}

.column-container {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.column {
    flex: 1;
    text-align: center;
}

.column a {
    display: inline-block; /* Ensure links do not stretch */
}

.column img:hover {
    background-color: rgba(0, 0, 0, 0.1)
}

.navbar {
    background-color: #333;
    overflow: hidden;
    top: 0;
    position:fixed;
    width: 100%;
}

.navbar a {
    float: left;
    display: block;
    color: #fff;
    text-align: center;
    padding: 14px 20px;
    text-decoration: none;
    font-size: 18px;
}

.navbar a:hover {
    background-color: #ddd;
    color: #333;
}

.brand-name {
    font-size: 72px; /* Increased font size */
    font-weight: bold;
    color: #FFB6C1;;
    text-transform: uppercase;
    margin-top: 45px;
    text-decoration: none;
}

.brand-name:hover {
    color: #fbf7c5;
    text-decoration: underline;
}

footer {
    background-color: #333;
    color: #fff;
    padding-bottom: 40px;
}

footer p {
    margin: 10px 0;
    font-size: 14px;
}

.instagram-section {
    margin-top: 40px;
}

.instagram-text {
    font-size: 24px;
    margin-bottom: 20px;
}

.instagram-handle {
    font-size: 18px;
    font-weight: bold;
}

.instagram-icon {
    width: 50px;
    margin-top: 20px;
}
.shop-now {
    color: #FFB6C1;
    text-decoration: underline;
}
.shop-now:hover {
    color: #333;
}

